--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -8,7 +8,7 @@
  		
         <!--About me-->
         <div class="title_content">
-            <div class="text_content">brown smith</div>
+            <div class="text_content">piman angkurasri</div>
             <div class="clear"></div>
         </div>
 
@@ -17,42 +17,42 @@
             <li>
                 <i class="glyphicon glyphicon-user"></i>
                 <label>Name</label>
-                <span class="value">Brown Smith</span>
+                <span class="value">Piman Angkurasri</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-calendar"></i>
                 <label>Date of birth</label>
-                <span class="value">March 18, 1988</span>
+                <span class="value">Feb 02, 1994</span>
                 <div class="clear"></div>
             </li>
 
             <li> 
                 <i class="glyphicon glyphicon-map-marker"></i>
                 <label>Adress</label>
-                <span class="value">San Francisco , CA</span>
+                <span class="value">Ubon Ratchathani , TH</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-envelope"></i>
                 <label>Email</label>
-                <span class="value">brown.smith@gmail.com</span>
+                <span class="value">vcancy@hotmail.com</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-phone"></i>
                 <label>Phone</label>
-                <span class="value">+123 (21) 1234-5678</span>
+                <span class="value">+66 637678767</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-globe"></i>
-                <label>Website</label>
-                <span class="value"><a href="#" target="_blank">sc.chinaz.com</a></span>
+                <label>Page</label>
+                <span class="value"><a href="#" target="_blank">www.facebook.com/timerPhoto/</a></span>
                 <div class="clear"></div>
             </li>
 
