--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -52,7 +52,7 @@
             <li>
                 <i class="glyphicon glyphicon-globe"></i>
                 <label>Page</label>
-                <span class="value"><a href="#" target="_blank">www.facebook.com/timerPhoto/</a></span>
+                <span class="value"><a href="#" target="_blank">www.facebook.com/timerPhoto</a></span>
                 <div class="clear"></div>
             </li>
 
